// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabItemText> should render correctly in Classic 1`] = `
.c0 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

<span
  className="c0"
>
  Text
</span>
`;

exports[`<TabItemText> should render correctly in Novo 1`] = `
.c0 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

<span
  className="c0"
>
  Text
</span>
`;

exports[`<TabItemText> should render correctly when is \`dark\` 1`] = `
.c0 {
  display: block;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  width: 100%;
}

<span
  className="c0"
  color="dark"
>
  Text
</span>
`;
